# Simple-tcp-udp-client-server

./: README.md
client/: Makefile  Makefile.vars.mk
client/config/makefiles/: Makefile.imx53.mk
client/src/: CMakeLists.txt  TCPclient.hpp  UDPclient.hpp  main.cpp
client/src/BaseClient/: BaseClient.cpp  BaseClient.hpp
server/: Makefile
server/config/makefiles/: Makefile.x86_64.mk
server/src/: CMakeLists.txt  TCPserver.hpp  UDPserver.hpp  main.cpp
server/src/BaseServer/: BaseServer.cpp  BaseServer.hpp
server/src/RequestHandler/: RequestHandler.cpp  RequestHandler.hpp  UIntVectorHandler.hpp
